# grafika3d

./: .gitignore  CMakeLists.txt
Models/: square.mtl
src/Assignments/CameraMovement/: app.cpp  app.h  camera.h
src/Assignments/Colors/: app.cpp
src/Assignments/Colors/shaders/: base_fs.glsl
src/Assignments/House/: app.cpp
src/Assignments/Indices/: README.md  app.cpp
src/Assignments/Indices/shaders/: base_vs.glsl
src/Assignments/MeshesMaterials/: app.cpp
src/Assignments/PVM/: app.cpp
src/Assignments/PVM/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Phong/: CMakeLists.txt  app.cpp  app.h
src/Assignments/Phong/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Pyramid/: app.cpp
src/Assignments/Pyramid/shaders/: base_vs.glsl
src/Assignments/Resizing/: app.cpp  app.h
src/Assignments/Resizing/shaders/: base_fs.glsl
src/Assignments/Textures/: CMakeLists.txt  app.cpp  app.h  camera_controler.h
src/Assignments/Textures2/: CMakeLists.txt  app.cpp  rotation.h
src/Assignments/Uniforms/: README.md  app.cpp
src/Assignments/Uniforms/shaders/: base_vs.glsl
src/Assignments/Zoom/: app.cpp  app.h  camera.h
src/Assignments/Zoom/shaders/: base_vs.glsl
src/Engine/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Light.h  Material.cpp  Material.h  Mesh.cpp  PhongMaterial.cpp  PhongMaterial.h  mesh_loader.cpp  texture.cpp  texture.h
src/Engine/shaders/: color_fs.glsl  phong_fs.glsl  phong_vs.glsl
src/XeEngine/: Node.cpp
